@@ -1,5 +1,5 @@
 // Do not edit this file! Generated by Ragel.
-// Ragel.exe -G2 -J -o JsonReader.java JsonReader.rl
+// Ragel.exe -J -o ../../../../../src/com/badlogic/gdx/utils/JsonReader.java JsonReader.rl
 /*******************************************************************************
  * Copyright 2011 See AUTHORS file.
  *
@@ -22,6 +22,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
+import java.util.Arrays;
 
 import com.badlogic.gdx.files.FileHandle;
 import com.badlogic.gdx.utils.JsonValue.ValueType;
@@ -84,6 +85,7 @@ public class JsonReader implements BaseJsonReader {
 	}
 
 	public JsonValue parse (char[] data, int offset, int length) {
+		stop = false;
 		int cs, p = offset, pe = length, eof = pe, top = 0;
 		int[] stack = new int[4];
 
@@ -100,11 +102,7 @@ public class JsonReader implements BaseJsonReader {
 			machine json;
 
 			prepush {
-				if (top == stack.length) {
-					int[] newStack = new int[stack.length * 2];
-					System.arraycopy(stack, 0, newStack, 0, stack.length);
-					stack = newStack;
-				}
+				if (top == stack.length) stack = Arrays.copyOf(stack, stack.length * 2);
 			}
 
 			action name {
@@ -181,6 +179,7 @@ public class JsonReader implements BaseJsonReader {
 					if (debug) System.out.println("string: " + name + "=" + value);
 					string(name, value);
 				}
+				if (stop) break _goto;
 				stringIsUnquoted = false;
 				s = p;
 			}
@@ -188,22 +187,26 @@ public class JsonReader implements BaseJsonReader {
 				String name = names.size > 0 ? names.pop() : null;
 				if (debug) System.out.println("startObject: " + name);
 				startObject(name);
+				if (stop) break _goto;
 				fcall object;
 			}
 			action endObject {
 				if (debug) System.out.println("endObject");
 				pop();
+				if (stop) break _goto;
 				fret;
 			}
 			action startArray {
 				String name = names.size > 0 ? names.pop() : null;
 				if (debug) System.out.println("startArray: " + name);
 				startArray(name);
+				if (stop) break _goto;
 				fcall array;
 			}
 			action endArray {
 				if (debug) System.out.println("endArray");
 				pop();
+				if (stop) break _goto;
 				fret;
 			}
 			action comment {
@@ -287,7 +290,7 @@ public class JsonReader implements BaseJsonReader {
 					case '"':
 						break outer;
 					}
-					// if (debug) System.out.println("quotedChar: '" + data[p] + "'");
+					if (debug) System.out.println("quotedChar: '" + data[p] + "'");
 					p++;
 					if (p == eof) break;
 				}
@@ -319,23 +322,25 @@ public class JsonReader implements BaseJsonReader {
 		current = null;
 		lastChild.clear();
 
-		if (p < pe) {
-			int lineNumber = 1;
-			for (int i = 0; i < p; i++)
-				if (data[i] == '\n') lineNumber++;
-			int start = Math.max(0, p - 32);
-			throw new SerializationException("Error parsing JSON on line " + lineNumber + " near: "
-				+ new String(data, start, p - start) + "*ERROR*" + new String(data, p, Math.min(64, pe - p)), parseRuntimeEx);
+		if (!stop) {
+			if (p < pe) {
+				int lineNumber = 1;
+				for (int i = 0; i < p; i++)
+					if (data[i] == '\n') lineNumber++;
+				int start = Math.max(0, p - 32);
+				throw new SerializationException("Error parsing JSON on line " + lineNumber + " near: "
+					+ new String(data, start, p - start) + "*ERROR*" + new String(data, p, Math.min(64, pe - p)), parseRuntimeEx);
+			}
+			if (elements.size != 0) {
+				JsonValue element = elements.peek();
+				elements.clear();
+				if (element != null && element.isObject())
+					throw new SerializationException("Error parsing JSON, unmatched brace.");
+				else
+					throw new SerializationException("Error parsing JSON, unmatched bracket.");
+			}
+			if (parseRuntimeEx != null) throw new SerializationException("Error parsing JSON: " + new String(data), parseRuntimeEx);
 		}
-		if (elements.size != 0) {
-			JsonValue element = elements.peek();
-			elements.clear();
-			if (element != null && element.isObject())
-				throw new SerializationException("Error parsing JSON, unmatched brace.");
-			else
-				throw new SerializationException("Error parsing JSON, unmatched bracket.");
-		}
-		if (parseRuntimeEx != null) throw new SerializationException("Error parsing JSON: " + new String(data), parseRuntimeEx);
 		return root;
 	}
 
@@ -344,6 +349,12 @@ public class JsonReader implements BaseJsonReader {
 	private final Array<JsonValue> elements = new Array(8);
 	private final Array<JsonValue> lastChild = new Array(8);
 	private JsonValue root, current;
+	private boolean stop;
+
+	/** Causes parsing to stop after the current or next object, array, or value. */
+	public void stop () {
+		stop = true;
+	}
 
 	/** @param name May be null. */
 	private void addChild (@Null String name, JsonValue child) {
