@@ -1,7 +1,7 @@
 
 // line 1 "JsonReader.rl"
 // Do not edit this file! Generated by Ragel.
-// Ragel.exe -G2 -J -o JsonReader.java JsonReader.rl
+// Ragel.exe -J -o ../../../../../src/com/badlogic/gdx/utils/JsonReader.java JsonReader.rl
 /*******************************************************************************
  * Copyright 2011 See AUTHORS file.
  *
@@ -24,6 +24,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.Reader;
+import java.util.Arrays;
 
 import com.badlogic.gdx.files.FileHandle;
 import com.badlogic.gdx.utils.JsonValue.ValueType;
@@ -86,6 +87,7 @@ public class JsonReader implements BaseJsonReader {
 	}
 
 	public JsonValue parse (char[] data, int offset, int length) {
+		stop = false;
 		int cs, p = offset, pe = length, eof = pe, top = 0;
 		int[] stack = new int[4];
 
@@ -184,13 +186,13 @@ public class JsonReader implements BaseJsonReader {
 							while (_nacts-- > 0) {
 								switch (_json_actions[_acts++]) {
 								case 0:
-								// line 110 "JsonReader.rl"
+								// line 108 "JsonReader.rl"
 								{
 									stringIsName = true;
 								}
 									break;
 								case 1:
-								// line 113 "JsonReader.rl"
+								// line 111 "JsonReader.rl"
 								{
 									String value = new String(data, s, p - s);
 									if (needsUnescape) value = unescape(value);
@@ -262,22 +264,20 @@ public class JsonReader implements BaseJsonReader {
 										if (debug) System.out.println("string: " + name + "=" + value);
 										string(name, value);
 									}
+									if (stop) break _goto;
 									stringIsUnquoted = false;
 									s = p;
 								}
 									break;
 								case 2:
-								// line 187 "JsonReader.rl"
+								// line 186 "JsonReader.rl"
 								{
 									String name = names.size > 0 ? names.pop() : null;
 									if (debug) System.out.println("startObject: " + name);
 									startObject(name);
+									if (stop) break _goto;
 									{
-										if (top == stack.length) {
-											int[] newStack = new int[stack.length * 2];
-											System.arraycopy(stack, 0, newStack, 0, stack.length);
-											stack = newStack;
-										}
+										if (top == stack.length) stack = Arrays.copyOf(stack, stack.length * 2);
 										{
 											stack[top++] = cs;
 											cs = 5;
@@ -292,6 +292,7 @@ public class JsonReader implements BaseJsonReader {
 								{
 									if (debug) System.out.println("endObject");
 									pop();
+									if (stop) break _goto;
 									{
 										cs = stack[--top];
 										_goto_targ = 2;
@@ -300,17 +301,14 @@ public class JsonReader implements BaseJsonReader {
 								}
 									break;
 								case 4:
-								// line 198 "JsonReader.rl"
+								// line 199 "JsonReader.rl"
 								{
 									String name = names.size > 0 ? names.pop() : null;
 									if (debug) System.out.println("startArray: " + name);
 									startArray(name);
+									if (stop) break _goto;
 									{
-										if (top == stack.length) {
-											int[] newStack = new int[stack.length * 2];
-											System.arraycopy(stack, 0, newStack, 0, stack.length);
-											stack = newStack;
-										}
+										if (top == stack.length) stack = Arrays.copyOf(stack, stack.length * 2);
 										{
 											stack[top++] = cs;
 											cs = 23;
@@ -321,10 +319,11 @@ public class JsonReader implements BaseJsonReader {
 								}
 									break;
 								case 5:
-								// line 204 "JsonReader.rl"
+								// line 206 "JsonReader.rl"
 								{
 									if (debug) System.out.println("endArray");
 									pop();
+									if (stop) break _goto;
 									{
 										cs = stack[--top];
 										_goto_targ = 2;
@@ -333,7 +332,7 @@ public class JsonReader implements BaseJsonReader {
 								}
 									break;
 								case 6:
-								// line 209 "JsonReader.rl"
+								// line 212 "JsonReader.rl"
 								{
 									int start = p - 1;
 									if (data[p++] == '/') {
@@ -349,7 +348,7 @@ public class JsonReader implements BaseJsonReader {
 								}
 									break;
 								case 7:
-								// line 222 "JsonReader.rl"
+								// line 225 "JsonReader.rl"
 								{
 									if (debug) System.out.println("unquotedChars");
 									s = p;
@@ -406,7 +405,7 @@ public class JsonReader implements BaseJsonReader {
 								}
 									break;
 								case 8:
-								// line 276 "JsonReader.rl"
+								// line 279 "JsonReader.rl"
 								{
 									if (debug) System.out.println("quotedChars");
 									s = ++p;
@@ -421,14 +420,14 @@ public class JsonReader implements BaseJsonReader {
 										case '"':
 											break outer;
 										}
-										// if (debug) System.out.println("quotedChar: '" + data[p] + "'");
+										if (debug) System.out.println("quotedChar: '" + data[p] + "'");
 										p++;
 										if (p == eof) break;
 									}
 									p--;
 								}
 									break;
-								// line 313 "JsonReader.java"
+								// line 310 "JsonReader.java"
 								}
 							}
 						}
@@ -449,7 +448,7 @@ public class JsonReader implements BaseJsonReader {
 							while (__nacts-- > 0) {
 								switch (_json_actions[__acts++]) {
 								case 1:
-								// line 113 "JsonReader.rl"
+								// line 111 "JsonReader.rl"
 								{
 									String value = new String(data, s, p - s);
 									if (needsUnescape) value = unescape(value);
@@ -521,11 +520,12 @@ public class JsonReader implements BaseJsonReader {
 										if (debug) System.out.println("string: " + name + "=" + value);
 										string(name, value);
 									}
+									if (stop) break _goto;
 									stringIsUnquoted = false;
 									s = p;
 								}
 									break;
-								// line 411 "JsonReader.java"
+								// line 409 "JsonReader.java"
 								}
 							}
 						}
@@ -536,7 +536,7 @@ public class JsonReader implements BaseJsonReader {
 				}
 			}
 
-			// line 312 "JsonReader.rl"
+			// line 315 "JsonReader.rl"
 
 		} catch (RuntimeException ex) {
 			parseRuntimeEx = ex;
@@ -547,27 +547,29 @@ public class JsonReader implements BaseJsonReader {
 		current = null;
 		lastChild.clear();
 
-		if (p < pe) {
-			int lineNumber = 1;
-			for (int i = 0; i < p; i++)
-				if (data[i] == '\n') lineNumber++;
-			int start = Math.max(0, p - 32);
-			throw new SerializationException("Error parsing JSON on line " + lineNumber + " near: "
-				+ new String(data, start, p - start) + "*ERROR*" + new String(data, p, Math.min(64, pe - p)), parseRuntimeEx);
+		if (!stop) {
+			if (p < pe) {
+				int lineNumber = 1;
+				for (int i = 0; i < p; i++)
+					if (data[i] == '\n') lineNumber++;
+				int start = Math.max(0, p - 32);
+				throw new SerializationException("Error parsing JSON on line " + lineNumber + " near: "
+					+ new String(data, start, p - start) + "*ERROR*" + new String(data, p, Math.min(64, pe - p)), parseRuntimeEx);
+			}
+			if (elements.size != 0) {
+				JsonValue element = elements.peek();
+				elements.clear();
+				if (element != null && element.isObject())
+					throw new SerializationException("Error parsing JSON, unmatched brace.");
+				else
+					throw new SerializationException("Error parsing JSON, unmatched bracket.");
+			}
+			if (parseRuntimeEx != null) throw new SerializationException("Error parsing JSON: " + new String(data), parseRuntimeEx);
 		}
-		if (elements.size != 0) {
-			JsonValue element = elements.peek();
-			elements.clear();
-			if (element != null && element.isObject())
-				throw new SerializationException("Error parsing JSON, unmatched brace.");
-			else
-				throw new SerializationException("Error parsing JSON, unmatched bracket.");
-		}
-		if (parseRuntimeEx != null) throw new SerializationException("Error parsing JSON: " + new String(data), parseRuntimeEx);
 		return root;
 	}
 
-	// line 421 "JsonReader.java"
+	// line 419 "JsonReader.java"
 	private static byte[] init__json_actions_0 () {
 		return new byte[] {0, 1, 1, 1, 2, 1, 3, 1, 4, 1, 5, 1, 6, 1, 7, 1, 8, 2, 0, 7, 2, 0, 8, 2, 1, 3, 2, 1, 5};
 	}
@@ -657,11 +659,21 @@ public class JsonReader implements BaseJsonReader {
 	static final int json_en_array = 23;
 	static final int json_en_main = 1;
 
-	// line 343 "JsonReader.rl"
+	// line 348 "JsonReader.rl"
 
 	private final Array<JsonValue> elements = new Array(8);
 	private final Array<JsonValue> lastChild = new Array(8);
 	private JsonValue root, current;
+	private boolean stop;
+
+	/** Causes parsing to stop after the current or next object, array, or value. */
+	public void stop () {
+		stop = true;
+	}
+
+	public boolean isStopped () {
+		return stop;
+	}
 
 	/** @param name May be null. */
 	private void addChild (@Null String name, JsonValue child) {
